--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -37,6 +37,8 @@
     <string name="network_required">इंटरनेट कनेक्शन सेटअप उपयोगकर्ता के लिए आवश्यक</string>
     <string name="loading_data">लोड हो रहा है उपयोगकर्ता डेटा</string>
     <string name="connecting_to_devices">उपकरणों से कनेक्ट करना</string>
+    <string name="device_connected">जुड़े हुए</string>
+    <string name="waiting_for_data">डेटा के लिए प्रतीक्षा कर रहा है</string>
 
 
     <!-- Strings related to User Profile -->
@@ -167,27 +169,6 @@
         <item>0</item>
         <item>1</item>
         <item>2</item>
-    </string-array>
-
-    <!-- Strings related to Data & Sync Settings -->
-    <string name="pref_category_ui_advanced">उन्नत</string>
-
-    <string name="pref_title_sync_frequency">सिंक आवृत्ति</string>
-    <string-array name="pref_sync_frequency_titles">
-        <item>15 मिनटों</item>
-        <item>30 मिनटों</item>
-        <item>1 समय</item>
-        <item>3 घंटे</item>
-        <item>6 घंटे</item>
-        <item>कभी नहीँ</item>
-    </string-array>
-    <string-array name="pref_sync_frequency_values">
-        <item>15</item>
-        <item>30</item>
-        <item>60</item>
-        <item>180</item>
-        <item>360</item>
-        <item>-1</item>
     </string-array>
 
 </resources>
