Breathing curve chart added in Graphs fragment.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -86,6 +86,7 @@
     <!-- Graphs -->
     <string name="graphs_pms_title">PM 1, PM 2.5, PM 10</string>
     <string name="graphs_bins_title">Bins: 0 – 15</string>
+    <string name="graphs_breathing_signal_title">Curva de respiración</string>
 
 
 
