--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,6 +107,7 @@
     <string name="action_settings">Settings</string>
     <string name="action_user_profile">Profile</string>
     <string name="action_connect">Connect</string>
+    <string name="action_supervised_mode">Supervised mode</string>
 
 
 
