Battery graph as separate fragment. A lot of refactoring in the RESpeck service + c code to make it better readable.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,6 +103,7 @@
     <string name="menu_graphs">GRAPHS</string>
     <string name="menu_settings">SETTINGS</string>
     <string name="menu_activity_summary">ACTIVITY</string>
+    <string name="menu_breathing_graph">BREATHING GRAPH</string>
 
     <!-- Action Bar menu -->
     <string name="action_air_speck">AirSpeck</string>
