Config added for enabling/disabling Airspeck. This also adapts displayed views and connection text. It will only try to connect to RESpeck. #31 issue implemented with this. If we have only one view being displayed in supervised mode, the tablayout is hidden.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -242,4 +242,6 @@
         <item>2</item>
     </string-array>
 
+    <string name="connection_text_respeck_only">Connecting to RESpeck</string>
+
 </resources>
