--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Daphne</string>
+    <string name="app_name">AirRespeck</string>
 
 
     <!-- Strings related to Initial Setup -->
