Converted SpeckService into a real Android service. Activities can connect via broadcastreceivers. For RESpeck, all measures are stored in a separate Extra for compatibility reasons. For Airspeck, we send all measures in a serialisable HashMap.

--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -78,9 +78,7 @@
     <string name="reading_bins">Bins total</string>
 
     <!-- Reading unit -->
-    <string name="reading_unit_bpm">bpm</string>
-    <string name="reading_unit_ug_m3">µg/m³</string>
-
+    <string name="reading_unit_bpm">BrPM</string>
 
 
     <!-- Graphs -->
