--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -38,7 +38,7 @@
     <string name="network_required">इंटरनेट कनेक्शन सेटअप उपयोगकर्ता के लिए आवश्यक</string>
     <string name="loading_data">लोड हो रहा है उपयोगकर्ता डेटा</string>
     <string name="connecting_to_devices">उपकरणों से कनेक्ट करना</string>
-    <string name="device_connected">जुड़े हुए</string>
+    <string name="device_found">जुड़े हुए</string>
     <string name="waiting_for_data">डेटा के लिए प्रतीक्षा कर रहा है</string>
 
 
