--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -280,7 +280,9 @@
     <string name="maps_loader_live_button">Show live map</string>
     <string name="maps_loader_historical_button">Show historical map</string>
     <string name="maps_loader_historical_data_title">Chose timeframe for historical data</string>
-
+    <string name="maps_loader_invalid_timestamps_to_before_from">Selected end of time period must lie after selected beginning.</string>
+    <string name="maps_loader_invalid_timestamps">Please specify the time and date of beginning and end of time period</string>
+    <string name="maps_loader_invalid_timestamp_in_future">Time period cannot lie in future</string>
 
 
 </resources>
