--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -228,8 +228,8 @@
 
     <!-- Map -->
     <string name="title_activity_maps_aq">Map</string>
-    <string name="maps_loader_live_button">Show live data and recent historical data</string>
-    <string name="maps_loader_historical_button">Show historical data</string>
+    <string name="maps_loader_live_button">Show live data and recent historical data on map</string>
+    <string name="maps_loader_historical_button">Show historical data on map</string>
     <string name="maps_loader_historical_data_title">Choose timeframe for historical data</string>
     <string name="maps_loader_invalid_timestamps_to_before_from">Selected end of time period must lie after selected beginning.</string>
     <string name="maps_loader_invalid_timestamps">Please specify the time and date of beginning and end of time period</string>
