Checking if bluetooth is on regularly. Stop service if file write throws an error which happens when app is not closed properly

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -237,5 +237,10 @@
     <string name="low_pollution_legend">Low pollution</string>
     <string name="high_pollution_legend">High pollution</string>
 
+    <!-- Request permission dialogs -->
+    <string name="location_request_dialog_title">Please allow location permission</string>
+    <string name="location_request_dialog_message">App requires location permission to link recorded pollution levels
+        with your location</string>
+    <string name="location_request_dialog_button">OK</string>
 
 </resources>
