Get location and storage permissions if not enabled

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -241,6 +241,9 @@
     <string name="location_request_dialog_title">Please allow location permission</string>
     <string name="location_request_dialog_message">App requires location permission to link recorded pollution levels
         with your location</string>
-    <string name="location_request_dialog_button">OK</string>
+    <string name="storage_request_dialog_title">Please allow storage permission</string>
+    <string name="storage_request_dialog_message">App requires storage permission to load the configuration file
+        and to store recorded values</string>
+    <string name="dialog_button_ok">OK</string>
 
 </resources>
