--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="readings_respeck_title">RESpeck readings</string>
     <string name="reading_breathing_rate">Breathing rate</string>
     <string name="reading_avg_breathing_rate">Minute average breathing rate</string>
+    <string name="readings_step_count">Step count in minute</string>
 
     <!-- Reading unit -->
     <string name="reading_unit_bpm">BrPM</string>
@@ -266,6 +267,5 @@
     <string name="airspeck_power_off_message">This action turns off the air pollution monitor. You can turn it back
         on by pressing the power button on the device next to the white lamp.\n
         यह क्रिया वायु प्रदूषण मॉनिटर को बंद कर देती है आप उसे सफेद दीपक के बगल में डिवाइस पर पावर बटन दबाकर इसे वापस चालू कर सकते हैं।</string>
-
 
 </resources>
